<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.maven-test-project</groupId>
        <artifactId>maven-test-project</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>my-stream-utils</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <annotations.version>22.0.0</annotations.version>
        <test-data-generator.version>1.0-SNAPSHOT</test-data-generator.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.maven-test-project</groupId>
            <artifactId>test-data-generator</artifactId>
            <version>${test-data-generator.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>${annotations.version}</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
